TornadoFX fix tests